# Fall-Fever

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Camera.cpp  Camera.h  Controller.cpp  Controller.h  EventHandler.cpp  EventHandler.h  Fall-Fever  Fall-Fever.kdev4  LICENSE  Mesh.cpp  Mesh.h  Model.h  PreLoad.cmake  README.md  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  defines.h  eventActions.h  imgui.ini  main.cpp  vcpkg.json
.kdev4/: Fall-Fever.kdev4
apps/: CMakeLists.txt
apps/fall-fever/: CMakeLists.txt  controller.cpp  controller.h  debug.cpp  flycam.cpp  main.cpp
data/: lights.json  models.json  scene.json  screens.json  shaderPrograms.json
data/shaders/: basic.frag  basic.vert  menu.frag  menu.geom  menu.vert  pointShadowDepth.frag  pointShadowDepth.vert  post_processing.frag  post_processing.vert  skybox.vert  standard_material.frag
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt  glad.c
lib/glad/glad/: glad.h
lib/glad/include/glad/: gl.h
lib/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp
lib/jsoncpp/: CMakeLists.txt
lib/stb/: CMakeLists.txt
res/: lights.json  models.json  screens.json  shaderPrograms.json
res/shaders/: basic.frag  basic.fs  basic.vert  basic.vs  directionalShadowDepth.frag  directionalShadowDepth.vert  light.frag  light.fs  light.vert  light.vs  menu.frag  old.vs  pointShadowDepth.geom  postprocessing.frag  postprocessing.vert  shadowDepth.frag  shadowDepth.vert  skybox.frag  skybox.vert
src/: CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  Entity.cpp  Entity.h  EventHandler.cpp  EventHandler.h  FrameBuffer.cpp  FrameBuffer.h  Framebuffer.cpp  Framebuffer.h  GLBucket.cpp  GLBucket.h  Helper.cpp  Helper.h  JsonParser.cpp  JsonParser.h  Light.cpp  Light.h  Menu.cpp  Menu.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram_.cpp  ShaderProgram_.h  Shadows.cpp  Shadows.h  Texture.cpp  Texture.h  TextureFactory.cpp  (+44 more)
src/components/: name.h  transform.cpp  transform.h  visibility.cpp  visibility.h
src/core/: application.cpp  application.h  camera.cpp  camera.h  glad.cpp  light.cpp  light.h  render.cpp  render.h  shader.cpp  shader.h  time.cpp  time.h
src/core/graphics/: framebuffer.cpp  framebuffer.h  image.cpp  material.cpp  material.h  mesh.h
src/definitions/: attribute_locations.h  enumHash.h  eventActions.h  models.h  window.h
src/imgui/: EntityWindow.cpp  EntityWindow.h  GeneralInfoWindow.cpp  GeneralInfoWindow.h  Handler.cpp  Handler.h  Window.cpp  Window.h
src/input/: input.cpp  input.h
src/lib/: CMakeLists.txt
src/lib/components/: transform.h
src/lib/core/: application.cpp  camera.h  game_loop.cpp  game_loop.h  glad.cpp  time.h
src/lib/scene/: gltf.cpp  gltf.h  scene.h
src/lib/window/: window.cpp  window.h
src/resources/: AbstractTexture.h  CubeMap.cpp  CubeMap.h  Model.cpp  Model.h  Resource.cpp  Resource.h  ResourceHandler.cpp  ResourceHandler.h  ShaderProgram.h  Texture.cpp  Texture.h  TextureType.h  TextureTypes.h
src/scene/: gltf.cpp  gltf.h  gltf_loader.cpp  gltf_loader.h  scene.cpp  scene.h
src/util/: Log.cpp  Log.h  log.cpp  log.h
src/window/: Window.cpp  Window.h  window.cpp
tools/: CMakeLists.txt  fileformat.txt  main.cpp  primitiveModel.h
vcpkg/fx-gltf/: portfile.cmake  vcpkg.json
